# awto-verilog2amaranth

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: amber-test-case.md  handover-2026-07-05.md
scripts/: amber_batch_convert.py  amber_gap_report.py
src/awto_verilog2amaranth/: __init__.py  cli.py  converter.py
