[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awto-verilog2amaranth"
version = "0.1.0"
description = "Verilog to Amaranth conversion with explicit semantic gap logging"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "awto" }
]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.scripts]
awto-verilog2amaranth = "awto_verilog2amaranth.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
